--- a/Backend/WebShopAppREST/.classpath
+++ b/Backend/WebShopAppREST/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="C:/Users/Korisnik/Downloads/gson-2.8.8.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
